# platform.core.multimedia.libmm-log

./: AUTHORS  Makefile.am  Makefile.in  aclocal.m4  build.sh  config.hin  configure  configure.ac  logmessage.conf.in  mm-log.pc.in
debian/: changelog  control  copyright  libmm-log.install.in  libmm-log.postinst  rules
packaging/: libmm-log.spec
src/: Makefile.am  Makefile.in  logmanager.c  logmanager_viewer.c  mm_log.h
